<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Toolbar -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- Content Area -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <!-- Cart Items List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"/>

        <!-- Total Price -->
        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_100_00"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="end"/>

        <!-- Checkout Button -->
        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <!-- Include BottomSection layout -->
    <include
        android:id="@+id/bottomSection"
        layout="@layout/bottom_section"/>

</RelativeLayout>
